--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.5.0",
     "@tanstack/react-query": "^5.36.0",
+    "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
