--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.17",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.5.0",
+    "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.36.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
