--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,11 @@
     "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
