--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,10 +19,12 @@
     "@tanstack/react-query": "^5.36.0",
     "@vis.gl/react-google-maps": "^1.0.0",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.11",
     "dayjs-plugin-utc": "^0.1.2",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
